[tool.poetry]
name = "fastapi-slack"
version = "0.0.0"
description = "Slack extension for FastAPI."
authors = ["Hadrien David <hadrien@dialogue.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
asgi-lifespan = "^1.0.1"
black = "^20.8b1"
fastapi = "^0.63.0"
httpx = "^0.16.1"
isort = "^5.6.4"
pdbpp = "^0.10.2"
pydantic = "^1.7.3"
pylama = "^7.7.1"
pytest = "^6.2.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
pytest-isort = "^1.2.0"
pytest-mypy = "^0.8.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
